# ia_gomoku

./: CMakeLists.txt
include/ai/: AGomokuAi.hpp  AGomukoAi.hpp  GomokuAi.hpp  GomukoAi.hpp  IGomokuAi.hpp  IGomukoAi.hpp  test.cpp  test.h
src/: main.cpp
src/ai/: GomokuAi.cpp  GomukoAi.cpp
